--- a/public/browse.html
+++ b/public/browse.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Holoscape.ai - Browse</title>
+    <title>Holoscape.ai - Browse Test</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="styles.css">
@@ -9,27 +9,10 @@
 <body>
     <div id="container"></div>
     <div id="info">
-        <h1>Holoscape.ai</h1>
-        <p>Browse Panoramas</p>
+        <h1>Holoscape.ai Test</h1>
+        <p>Just a red cube for now.</p>
     </div>
-
-    <div id="controls">
-        <label for="panoramaSelector">Select Panorama:</label>
-        <select id="panoramaSelector"></select>
-
-        <label for="sphereSize">Sphere Size: <span id="sphereSizeValue">6</span></label>
-        <input type="range" id="sphereSize" min="3" max="30" step="0.1" value="6">
-
-        <label for="depthScale">Depth Scale: <span id="depthScaleValue">4.0</span></label>
-        <input type="range" id="depthScale" min="0" max="10" step="0.1" value="4.0">
-
-        <label for="meshResolution">Mesh Resolution: <span id="meshResolutionValue">256</span></label>
-        <input type="range" id="meshResolution" min="256" max="8192" step="256" value="256">
-
-        <button id="applySettings">Apply Settings</button>
-    </div>
-
+    <!-- We won't even show controls since we're just testing basics -->
     <script type="module" src="viewer_common.js"></script>
-    <script type="module" src="browse.js"></script>
 </body>
 </html>
