--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <title>Holoscape.ai - Words Into Worlds</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <!-- CHANGED: Reference the new styles.css here -->
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -16,4 +17,3 @@
   <script src="homepage.js"></script>
 </body>
 </html>
-
