--- a/public/browse.html
+++ b/public/browse.html
@@ -4,6 +4,7 @@
     <title>Holoscape.ai - Browse</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <!-- CHANGED: Reference the new styles.css here -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
