--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,24 @@
 <head>
   <title>Holoscape.ai - Words Into Worlds</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <!-- CHANGED: Reference the new styles.css here -->
-  <link rel="stylesheet" href="styles.css">
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0, user-scalable=no"
+  />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <!-- CHANGED: Hero section with a background image -->
   <div class="hero">
-    <h1>Holoscape.ai</h1>
-    <p>Words Into Worlds</p>
-    <button id="browseBtn">Browse Panoramas</button>
-    <button id="generateBtn">Generate Panorama</button>
+    <!-- The text overlay content in the hero -->
+    <div class="hero-content">
+      <h1>Holoscape.ai</h1>
+      <p>Words Into Worlds</p>
+      <button id="browseBtn">Browse Panoramas</button>
+      <button id="generateBtn">Generate Panorama</button>
+    </div>
   </div>
+
   <script src="homepage.js"></script>
 </body>
 </html>
