--- a/public/index.html
+++ b/public/index.html
@@ -3,24 +3,19 @@
 <head>
   <title>Holoscape.ai - Words Into Worlds</title>
   <meta charset="utf-8">
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1.0, user-scalable=no"
-  />
-  <link rel="stylesheet" href="styles.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <!-- Link to styles.css -->
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- CHANGED: Hero section with a background image -->
   <div class="hero">
-    <!-- The text overlay content in the hero -->
-    <div class="hero-content">
-      <h1>Holoscape.ai</h1>
-      <p>Words Into Worlds</p>
+    <!-- We removed all text, keeping only the two buttons -->
+    <div class="hero-buttons">
       <button id="browseBtn">Browse Panoramas</button>
       <button id="generateBtn">Generate Panorama</button>
     </div>
   </div>
-
+  <!-- Your existing script for button navigation -->
   <script src="homepage.js"></script>
 </body>
 </html>
