--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
   <div class="hero">
     <!-- We removed all text, keeping only the two buttons -->
     <div class="hero-buttons">
-      <button id="browseBtn">Browse Panoramas</button>
-      <button id="generateBtn">Generate Panorama</button>
+      <button id="browseBtn">BROWSE WORLDS</button>
+      <button id="generateBtn">GENERATE WORLD</button>
     </div>
   </div>
   <!-- Your existing script for button navigation -->
